fix(dialog): no more scrollbar appearing while responses animate

--- a/src/renderer/components/Button/Button.module.scss
+++ b/src/renderer/components/Button/Button.module.scss
@@ -3,6 +3,7 @@
 	border: none;
 	border-radius: 0;
 	color: inherit;
+	cursor: pointer;
 	font-family: inherit;
 	font-size: inherit;
 	font-weight: inherit;
